--- a/app/src/main/res/layout/content_home.xml
+++ b/app/src/main/res/layout/content_home.xml
@@ -84,7 +84,7 @@
         tools:text="$50" />
 
     <androidx.constraintlayout.widget.Barrier
-        android:id="@+id/barrier_top_content"
+        android:id="@+id/barrier_content_summary"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:barrierDirection="bottom"
@@ -92,11 +92,23 @@
         app:constraint_referenced_ids="text_income, text_expense" />
 
     <View
+        android:id="@+id/divider_content_summary"
         android:layout_width="0dp"
         android:layout_height="@dimen/divider"
         android:background="@color/divider"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/barrier_top_content" />
+        app:layout_constraintTop_toBottomOf="@id/barrier_content_summary" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recycler_view"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:clipToPadding="false"
+        android:paddingVertical="@dimen/padding"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/divider_content_summary" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
