--- a/app/src/main/res/layout/content_home.xml
+++ b/app/src/main/res/layout/content_home.xml
@@ -88,17 +88,27 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:barrierDirection="bottom"
-        app:barrierMargin="@dimen/padding"
         app:constraint_referenced_ids="text_income, text_expense" />
+
+    <com.google.android.material.progressindicator.LinearProgressIndicator
+        android:id="@+id/progress_expense"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="@dimen/padding"
+        android:layout_marginTop="@dimen/padding_double"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/barrier_content_summary" />
 
     <View
         android:id="@+id/divider_content_summary"
         android:layout_width="0dp"
         android:layout_height="@dimen/divider"
+        android:layout_marginTop="@dimen/padding_double"
         android:background="@color/divider"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/barrier_content_summary" />
+        app:layout_constraintTop_toBottomOf="@id/progress_expense" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view"
