--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,6 +3,7 @@
 
     <dimen name="padding">12dp</dimen>
     <dimen name="padding_half">6dp</dimen>
+    <dimen name="padding_double">24dp</dimen>
 
     <dimen name="divider">1dp</dimen>
 </resources>
