--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,7 @@
 
     <color name="divider">#1f000000</color> <!-- 12% black -->
 
+    <color name="income">#388E3C</color>
+    <color name="expense">#D32F2F</color>
+
 </resources>
