update: rounded corner expense progress

--- a/app/src/main/res/layout/content_home.xml
+++ b/app/src/main/res/layout/content_home.xml
@@ -96,6 +96,8 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="@dimen/padding"
         android:layout_marginTop="@dimen/padding_double"
+        app:trackCornerRadius="@dimen/expense_summary_progress_corner"
+        app:trackThickness="@dimen/expense_summary_progress_height"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/barrier_content_summary" />
