--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,4 +6,7 @@
     <dimen name="padding_double">24dp</dimen>
 
     <dimen name="divider">1dp</dimen>
+
+    <dimen name="expense_summary_progress_corner">100dp</dimen>
+    <dimen name="expense_summary_progress_height">6dp</dimen>
 </resources>
