update: bottomsheet theme

--- a/app/src/main/res/layout/bottomsheet_add_transaction.xml
+++ b/app/src/main/res/layout/bottomsheet_add_transaction.xml
@@ -75,6 +75,7 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.button.MaterialButton
+        style="@style/Widget.MaterialComponents.Button"
         android:id="@+id/button_add"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
